fixed alignment of reviews and laugh boxes

--- a/public/stylesheets/laughs.css
+++ b/public/stylesheets/laughs.css
@@ -22,6 +22,7 @@ tbody tr:nth-child(odd) {
 
   tbody tr:nth-child(even) {
     background-color: #201303;
+    text-align: center;
   }
 td{
     padding: 2em;
